--- a/dvclive/params.yaml
+++ b/dvclive/params.yaml
@@ -1,8 +1,8 @@
 model_training:
   random_state: 42
-  n_estimators: 100
+  n_estimators: 300
   criterion: gini
-  max_depth: 5
+  max_depth: 10
   min_samples_split: 5
-  bootstrap: true
+  bootstrap: false
   min_samples_leaf": 2
